--- a/3Education.html
+++ b/3Education.html
@@ -37,7 +37,7 @@
    						<a href="4Experience.html">Experience</a> |
    						<a href="5Interest.html">Interest</a> |
    						<a href="6Gallery.html">Gallery</a> |
-   						<a href="Index.html"style="float:right;"><img src=home.png alt=home height="30" width="30"></a>
+   						<a href="index.html"style="float:right;"><img src=home.png alt=home height="30" width="30"></a>
 				</nav>
 				
 				<article style="color:black;text-align:center;background-color:rgba(255,222,173)">
@@ -106,7 +106,7 @@
 	<tr>
 		<td colspan=2 style="background-color:rgba(200, 200, 200, 0.5); text-align:center; font-family:Tw Cen MT; font-size:small; border:0px solid black; width:890px">
 			<footer>
-			<p align><sub>© Copyright 2020. All Rights Reserved. Issey E-portfolio (nurhihsan)<br> Best browser viewed used Google Chrome (1280 x 800 resolution)<br>
+			<p align><sub>Â© Copyright 2020. All Rights Reserved. Issey E-portfolio (nurhihsan)<br> Best browser viewed used Google Chrome (1280 x 800 resolution)<br>
 			This website is for educational purposes (IMS456). Any inquery please contact webmaster at: myisse8482@gmail.com<br>Last updated on 29 April 2020</sub>
 			</p>
 			</footer>
